fix cursor visible over hint box

--- a/wwwroot/pong/pong.css
+++ b/wwwroot/pong/pong.css
@@ -118,7 +118,6 @@ canvas.paused {
     transition: visibility 1s, opacity 1s;
 	padding: 0 1em;
     text-align: right;
-    cursor: none;
 }
 
 #hint a {
